@@ -2,87 +2,111 @@ module DataMapper
   module Associations
     
     class HasAndBelongsToManyAssociation
-      include Enumerable
       
-      def initialize(instance, association_name, options)
-        @instance = instance
+      def initialize(klass, association_name, options)
+        @table = database.schema[klass]
         @association_name = association_name.to_sym
         @options = options
         
-        @associated_class = if options.has_key?(:class) || options.has_key?(:class_name)
-          associated_class_name = (options[:class] || options[:class_name])
+        define_accessor(klass)
+      end
+      
+      def name
+        @association_name
+      end
+
+      def constant
+        @associated_class || @associated_class = if @options.has_key?(:class) || @options.has_key?(:class_name)
+          associated_class_name = (@options[:class] || @options[:class_name])
           if associated_class_name.kind_of?(String)
             Kernel.const_get(Inflector.classify(associated_class_name))
           else
             associated_class_name
           end
         else            
-          Kernel.const_get(Inflector.classify(association_name))
+          Kernel.const_get(Inflector.classify(@association_name))
         end
-        
-        @join_table_name = @options.has_key?(:join_table_name) ? @options[:join_table_name] : [Inflector.tableize(@instance.class.name), Inflector.tableize(@associated_class.name)].sort.join('_')
-      end
-      
-      def self.setup(klass, association_name, options)
-        
-        # Define the association instance method (i.e. Project#tasks)
-        klass.class_eval <<-EOS
-          def #{association_name}
-            @#{association_name} || (@#{association_name} = HasAndBelongsToManyAssociation.new(self, "#{association_name}", #{options.inspect}))
-          end
-        EOS
-        
-      end
-      
-      def each
-        find.each { |item| yield item }
-      end
-      
-      def size
-        entries.size
-      end
-      alias length size
-      
-      def [](key)
-        entries[key]
-      end
-      
-      def empty?
-        entries.empty?
-      end
-      
-      def find
-        return @results unless @results.nil?
-        
-        unless @instance.loaded_set.nil?
-          
-          # Temp variable for the instance variable name.
-          instance_variable_name = "@#{foreign_key}".to_sym
-          
-          @results = @instance.session.find(@associated_class, :all,
-            :id.select => { :table => @join_table_name, foreign_key.to_sym => @instance.key }
-          ) do |animal_id, ref|
-            @instance.load_set.find { |x| x.id == animal_id }.exhibits << ref
-          end
-          
-        end
-        
-        return @results || (@results = [])
-      end
-      
-      def set(results)
-        @results = results
-      end
-      
-      def inspect
-        @results.inspect
       end
       
       def foreign_key
-        @foreign_key || (@foreign_key = (@options[:foreign_key] || @instance.session.mappings[@instance.class].default_foreign_key))
+        @foreign_key || (@foreign_key = (@options[:foreign_key] || @table.default_foreign_key))
       end
+      
+      def join_table_name
+        @join_table_name || @join_table_name = begin
+          @options[:join_table] || begin
+            [ @table.name.to_s, database.schema[constant].name.to_s ].sort.join('_')
+          end
+        end
+      end
+      
+      # Define the association instance method (i.e. Project#tasks)
+      def define_accessor(klass)
+        klass.class_eval <<-EOS
+          def #{@association_name}
+            @#{@association_name} || (@#{@association_name} = HasAndBelongsToManyAssociation::Set.new(self, #{@association_name.inspect}))
+          end
+        EOS
+      end
+      
+      class Set
+        
+        include Enumerable
+        
+        def initialize(instance, association_name)
+          @instance, @association_name = instance, association_name
+        end
+        
+        def association
+          @association || (@association = @instance.session.schema[@instance.class].association(@association_name))
+        end
+        
+        def each
+          entries.each { |item| yield item }
+        end
 
-    end
+        def size
+          entries.size
+        end
+        alias length size
+
+        def [](key)
+          entries[key]
+        end
+
+        def empty?
+          entries.empty?
+        end
+        
+        def entries
+          @entries || @entries = begin
+
+            if @instance.loaded_set.nil?
+              []
+            else
+              @instance.session.all(
+                association.constant,
+                association.foreign_key.to_sym => @instance.loaded_set.map(&:key)
+              ).group_by(&association.foreign_key.to_sym).each do |key,instances|
+                if instance = @instance.loaded_set.find { |entry| entry.key == key }
+                  instance.send(@association_name).set(instances)
+                end
+              end
+              
+              @entries              
+            end
+          end
+        end
+
+        def set(results)
+          @entries = results
+        end
+
+        def inspect
+          @entries.inspect
+        end
+      end
+    end # class HasAndBelongsToManyAssociation
     
-  end
-end
+  end # module Associations
+end # module DataMapper
