@@ -37,3 +37,4 @@
 * HasManyAssociation refactored to use HasNAssociation superclass
 * Slight spec tweaks to accomodate the updates
 * HasOneAssociation refactored to use HasNAssociation superclass
+* Added HasAndBelongsToManyAssociation, using HasNAssociation as a basis; Need to add corresponding SQL generation code in AdvancedLoadCommand
